# euler

./: Cargo.toml  README.md
src/: combinatorics_selections.rs  composite_number.rs  consecutive_prime_sum.rs  digit_swap_doubles.rs  integer_right_triangles.rs  lychral_numbers.rs  main.rs  maximal_digit_sum.rs  pentagonal_numbers.rs  permuted_multiples.rs  poker_player.rs  prime_digit_replacement.rs  prime_pair_sets.rs  prime_pair_sets_2.rs  prime_pairs_3.rs  prime_permutations.rs  self_powers.rs  square_root_convergence.rs  triangle_pentagon_hexagon_numbers.rs  xor_decryption.rs  xor_decryption_2.rs  xor_decryption_frequency_analysis.rs
