[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
itertools = "0.10.5"
regex = "1"
anyhow = "1.0.75"
